--- a/Info.html
+++ b/Info.html
@@ -24,7 +24,7 @@
             <h3>Hello, It's Me</h3>
             <h1>Rafael</h1>
             <h3>#<span class="text"></span></h3>
-            <p>Zuroku Dev</p> <!-- perbaiki teks ke bahasa Inggris -->
+            <p>Petruk Developer</p> <!-- perbaiki teks ke bahasa Inggris -->
             <div class="home-sci">
                 <a href="https://youtube.com/@AlwaysZuroku" style="--i:7"><i class='bx bxl-youtube'></i></box-icon></a>
                 <a href="https://wa.me/6285727198100" style="--i:8"><i class='bx bxl-whatsapp'></i></box-icon></a>
